fixed display of quicklinks and search area on IE8 (search template not running, no errors)

--- a/assets/ie/css/ie.css
+++ b/assets/ie/css/ie.css
@@ -33,3 +33,9 @@
 #uw-container #quicklinks ul#big-links li span {
 	background-image: url(../img/uw-sprite.png);
 }
+#uw-container.open div#uw-container-inner {
+    margin-right: 270px;
+}
+body.search-open #uw-container {
+    margin-top: 192px;
+}
